fix content ul overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -260,6 +260,9 @@
         font-weight: 600;
         line-height: 1.25;
     }
+    ul {
+        overflow-y: scroll;
+    }
 }
 
 ul.pager {
